--- a/my-next-pages-app/package.json
+++ b/my-next-pages-app/package.json
@@ -15,10 +15,10 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "bootstrap": "^5.3.5",
     "lucide-react": "^0.507.0",
-    "next": "15.2.5",
-    "react": "^19.0.0",
+    "next": "^15.3.2",
+    "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0"
   },
   "devDependencies": {
@@ -30,6 +30,6 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.5",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^4.9.5"
   }
 }
